[clone-init] Fix: parent-first sorting of mailbox folders